# docker-densepose

./: Dockerfile  README.md  build.sh  inference  inference1  install-densepose.sh  run.sh  run_inference.sh  traces.txt
densepose/: infer.sh  requirements.txt
pose2texture/: pose2texture.cpp  pose2texture.workspace  pose2texture_800x1200.cpp
pose2texture/.codelite/: pose2texture.session
texture2pose/: CMakeLists.txt  texture2pose.cpp  texture2pose.project  texture2pose2.cpp
